--- a/Legend/Legend.csproj
+++ b/Legend/Legend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>Legend</AssemblyName>
     <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
@@ -11,19 +11,9 @@
   <PropertyGroup />
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="TShock" Version="5.1.3" />
     <PackageReference Include="Z.Expressions.Eval" Version="4.0.92">
       <GeneratePathProperty>False</GeneratePathProperty>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="OTAPI">
-      <HintPath>..\..\TShock-5.1.3-for-Terraria-1.4.4.9-win-x64-Release\bin\OTAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="TerrariaServer">
-      <HintPath>..\..\TShock-5.1.3-for-Terraria-1.4.4.9-win-x64-Release\bin\TerrariaServer.dll</HintPath>
-    </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>..\..\TShock-5.1.3-for-Terraria-1.4.4.9-win-x64-Release\ServerPlugins\TShockAPI.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
