--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: tree
+      run: tree
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with: 
         name: release
         path: Legend_p/bin/Debug/net6/Legend.dll
-        if-no-files-found: |
-          warn
-          tree
