--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,11 @@ jobs:
       with: 
         name: release
         path: Legend/bin/Debug/net6/Legend.dll
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+      with:
+        prerelease: true
+        tag_name: ${{ steps.build.outputs.TAG_NAME }}
+        name: Release ${{ steps.build.outputs.TAG_NAME }}
+        files: Legend/bin/Debug/net6/Legend.dll
