--- a/Legend/Legend.csproj
+++ b/Legend/Legend.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <None Remove="C:\Users\32512\.nuget\packages\tshock\5.1.3\contentFiles\any\net6.0\HttpServer.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="TShock" Version="5.1.3" />
     <PackageReference Include="Z.Expressions.Eval" Version="4.0.92">
